--- a/Example/Podfile
+++ b/Example/Podfile
@@ -2,6 +2,8 @@ use_frameworks!
 
 platform :ios, '9.0'
 
+warn_for_unused_master_specs_repo => false
+
 target 'ZBOrientation_Example' do
   pod 'ZBOrientation', :path => '../'
 
